tests/paczka1/small_fuzzy/68659765.err
Error in line 1: S270 A514 59,1
Error in line 2: 6px A191 79,9
